# confetti_desktop

./: .gitignore  AppIcon.icns  Cargo.toml  Info.plist  README.md  build.rs  build.sh  build_osx.sh
_design/: create_iconset.sh  destruction.afphoto  icon.afphoto
src/: action.rs  control.rs  macos.rs  main.rs  modal.rs  p.rs  pkv.rs  screenshot.rs
