[package]
name = "confetti_desktop"
version = "1.6.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
# bevy-inspector-egui = "0.25.2"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
objc = "0.2.7"
rand = "0.8.5"
xcap = "0.0.10"

[build-dependencies]
embed-resource = "1.6.3"
